<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.totof.bread.InputFragment" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/quantity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:text="@string/input_quantity_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/pain_simple"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nbPainsSimple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/pain_graine"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nbPainsGraine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView4"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/demi_pain_simple"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nbDemiPainsSimple"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView11"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/demi_pain_graine"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nbDemiPainsGraine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView12"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/pain_simple_moule"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nbPainsSimpleMoule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView13"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/pain_graine_moule"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nbPainsGraineMoule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView14"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/demi_pain_simple_moule"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/nbDemiPainsSimpleMoule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="7"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView15"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="8"
            android:text="@string/demi_pain_graine_moule"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nbDemiPainsGraineMoule"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="8"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView16"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/levain_actuel"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/levainActuel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="9"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

    </GridLayout>
</ScrollView>
