<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.totof.bread.RecipeFragment">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp">

        <TextView
            android:id="@+id/receipe_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:background="?attr/colorButtonNormal"
            android:fontFamily="sans-serif"
            android:text="@string/input_receipe_title"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/poids_pain"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/poidsPain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="1"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView6"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/pourcentage_levain"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/pourcentage_eau"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/pourcentage_eau_levain"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/pourcentage_sel"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/levain_a_garder"
            android:textSize="19sp" />

        <EditText
            android:id="@+id/pourcentageLevain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="2"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/pourcentageEau"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="3"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/pourcentageEauLevain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="4"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/pourcentageSel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="5"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/levainAGarder"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal"
            android:layout_row="6"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:selectAllOnFocus="true" />
    </GridLayout>
</ScrollView>
