<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context="com.totof.bread.QuantityFragment">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/make_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_span="2"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:text="@string/output_dough_title"
            android:textAlignment="viewStart"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pate_totale"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/resu_pate_totale"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/farine_recette"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/resu_farine_recette"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eau_recette"
            android:textAlignment="viewStart"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_eau_recette"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView43"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/sel"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/resu_sel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/graine_a_ajouter"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/resu_graine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/levain_a_faire"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/resu_levain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/farine_levain_a_faire"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/resu_farine_levain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/eau_levain_a_faire"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_eau_levain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/title_keep"
            android:textColor="@android:color/white"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_pate_conserver"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="19sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cut_pasta"
            android:textColor="@android:color/white"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_pate_a_decouper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textColor="@android:color/white"
            android:textSize="19sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pate_totale_simple"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_pate_totale_simple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pate_totale_a_graine"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_pate_totale_graine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pate_simple"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_pate_simple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray"
        android:paddingBottom="2dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="3dp">

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pate_a_graine"
            android:textSize="19sp" />


        <TextView
            android:id="@+id/resu_pate_graine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:textSize="19sp" />


    </TableRow>

</TableLayout>
